fixing layout issues

--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ body {
     width: 600px;
     height: 400px;
     background-color: #eee;
-    font-size: 12;
 
 }
 
